k8s/istio/gateway-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: enterprise-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - enterprise-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend
        port:
          number: 5000
  - route:
    - destination:
        host: frontend
        port:
          number: 80
